# StillSound-Studio

./: LICENSE  README.md  package-lock.json  package.json
browser-extension/: background.js  content.js  manifest.json  popup.html  popup.js
src/: index.html  main.js  styles.css
src-tauri/: .gitignore  Cargo.toml  installer-hooks.nsh  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
