[package]
name = "stillsound_studio"
version = "1.2.0"
description = "Native Studio Console for Ambient Sync"
authors = ["StillSound"]
edition = "2021"

[lib]
name = "stillsound_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.0.0"
tauri-plugin-autostart = "2.0.0"
tauri-plugin-single-instance = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
warp = "0.3"
tokio-tungstenite = "0.20"
futures-util = "0.3"
open = "5.0"
url = "2.4"
base64 = "0.21"
rand = "0.8"
sha2 = "0.10"
